--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '14'
       - name: Install dependencies
-        run: npm install --no-audit --no-fund --no-optional
+        run: npm ci --no-audit --no-fund --no-optional
       - name: Lint
         run: npm run eslint
       - name: Build
